tests/lean/bad_notation.lean
import logic
open nat

section
  variable a : nat
  notation `a1`:max := a + 1
end

definition foo := a1
